# plvm-homeworks

./: README.md
01-cache-metrics/: CMakeLists.txt  README.md
01-cache-metrics/src/: main.cpp
02-lama-interpreter/: Makefile
02-lama-interpreter/interpreter/: .gitignore  Makefile  bytefile.c  bytefile.h  dump.c  interpreter.c  opcode.h
02-lama-interpreter/performance/: Makefile
02-lama-interpreter/regression/: Makefile
02-lama-interpreter/regression/deep-expressions/: Makefile
02-lama-interpreter/regression/expressions/: Makefile
02-lama-interpreter/runtime/: runtime.c
03-lama-bcstats/: .gitignore  CMakeLists.txt  README.md  Sort.stats
03-lama-bcstats/src/: bcstats.cpp  bytefile.cpp  bytefile.h  opcode.h
06-mempool/: CMakeLists.txt  README.md
06-mempool/src/: main.cpp
07-non-blocking-pool/: CMakeLists.txt  README.md
07-non-blocking-pool/src/: main.cpp
08-string-ptr/: CMakeLists.txt  README.md
08-string-ptr/src/: cstring.cpp  cstring.h  string_ptr.cpp  string_ptr.h
08-string-ptr/tests/: test_string_ptr.cpp
09-safe-byte-read/: CMakeLists.txt  README.md
09-safe-byte-read/src/: safe_read.cpp  safe_read.h
09-safe-byte-read/tests/: test_safe_read.cpp
10-parallel-memcpy/: CMakeLists.txt  README.md
10-parallel-memcpy/src/: main.cpp
lama-tools/: INTERPRETER.md  Makefile  README.md
lama-tools/performance/: Makefile
lama-tools/regression/: .gitignore  Makefile
lama-tools/regression/deep-expressions/: .gitignore  Makefile
lama-tools/runtime/: gc.c
lama-tools/tools/: Makefile  bcdump.cpp  bcstats.cpp  bytefile.cpp  bytefile.h  error.h  inst_reader.h  interprete.cpp  interprete.h  interpreter.cpp  opcode.h  runtime_externs.cpp  runtime_externs.h  stack.cpp  stack.h  verify.cpp  verify.h
(+6 files in other folders)
